--- a/xzarsk03-contracts-for-concurrency-30-appendices.tex
+++ b/xzarsk03-contracts-for-concurrency-30-appendices.tex
@@ -30,7 +30,7 @@ then run RoadRunner: \texttt{rrrun test.Test}.
 To launch the contract analyzer on a simple program, run the following commands:
 \begin{lstlisting}
 $ javac test/ContractTest.java
-$ rrrun -tools=CT -contractFile=test/ContractTest.contract test.ContractTest
+$ rrrun -tool=CT -contractFile=test/ContractTest.contract test.ContractTest
 \end{lstlisting}
 The analyzer should find a contract violation.
 
