--- a/xzarsk03-contracts-for-concurrency.tex
+++ b/xzarsk03-contracts-for-concurrency.tex
@@ -175,8 +175,14 @@
   faculty.en={Faculty of Information Technology},
 }
 
-% Rozšířený abstrakt (cca 3 normostrany) - lze definovat zde nebo výše / Extended abstract (approximately 3 standard pages) - can be defined here or above
-%\extendedabstract{Do tohoto odstavce bude zapsán výtah (abstrakt) práce v českém (slovenském) jazyce.}
+% Rozšířený abstrakt (cca 3 normostrany) - lze definovat zde nebo výše /
+% Extended abstract (approximately 3 standard pages) - can be defined here or
+% above
+% "Pokud je směrnicí rektora (čl. 3 odst. 7 a čl. 15 odst. 1 písm. e) vyžadován
+% rozšířený abstrakt v češtině nebo slovenštině, bude mít rozsah 2 až 6
+% normostran a bude obsahovat úvod, popis vlastního řešení a shrnutí a
+% zhodnocení dosažených výsledků."
+\extendedabstract{\todo{}}
 
 % nastavení délky bloku s titulkem pro úpravu zalomení řádku - lze definovat zde nebo výše / setting the length of a block with a thesis title for adjusting a line break - can be defined here or above
 %\titlelength{14.5cm}
